HBW-55 Fix widget panels overflow (#97)

--- a/hbw/app/assets/stylesheets/hbw.sass
+++ b/hbw/app/assets/stylesheets/hbw.sass
@@ -33,6 +33,7 @@
     border-radius: 0 0 4px 4px
     border-right: 1px solid #ddd
     padding: 10px
+    overflow: visible
 
   .form-group
     display: table
@@ -403,5 +404,7 @@
     i
       cursor: pointer
 
-  .panel-default
+  .panel-default,
+  .panel-group,
+  .panel-collapse.in
     overflow: visible
